replaced grid with tiles, refactored Copy and Edit buttons

--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,15 @@
 label {
   color: #000;
 }
+
+.account-card {
+  border-right: 1px solid rgba(0,0,0,0.2);
+  box-shadow: 1px 1px 0px rgba(0,0,0,0.1);
+  margin: 0.5rem;
+  padding: 0.5rem;
+  border-bottom: 1px solid rgba(0,0,0,0.3);
+  border-top: 1px solid rgba(0,0,0,0.1);
+  border-left: 1px solid rgba(0,0,0,0.1);
+  max-width: 31%;
+  float: left;
+}
