moved non-components into /helpers

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,12 @@ label {
   border-bottom: 1px solid rgba(0,0,0,0.3);
   border-top: 1px solid rgba(0,0,0,0.1);
   border-left: 1px solid rgba(0,0,0,0.1);
+  /*
   max-width: 31%;
   float: left;
+  */
+}
+
+.new .input-group-addon {
+  display: none;
 }
