--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,9 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -35,12 +41,16 @@ label {
   border-bottom: 1px solid rgba(0,0,0,0.3);
   border-top: 1px solid rgba(0,0,0,0.1);
   border-left: 1px solid rgba(0,0,0,0.1);
-  /*
-  max-width: 31%;
   float: left;
-  */
+}
+.new {
+  width: 96%
 }
 
 .new .input-group-addon {
   display: none;
+}
+
+.account-card.new span.input-group.input-group-sm {
+  display: block;
 }
